# bench-libs

./: Dockerfile  README.md  benchmark.py  gabe_notes.txt  install.sh
emp-toolkit/: Dockerfile  install.sh  install_bolttools.sh  install_testtools.sh
emp-toolkit/source/: CMakeLists.txt  ecdsa.cpp  ecdsa_testvector.py  install_ripemd.sh  not_patch.diff  ripemd-160.cpp  sha256-ag2pc.cpp  sha256.cpp  tokens.h  uinteger.h  uinteger.hpp
emp-toolkit/source/build_tokens/: ecdsa.cpp  ecdsa.h  hmac.cpp  hmac.h  main.cpp  sha256.cpp  sha256.h  tokens-misc.cpp  tokens-misc.h  tokens.cpp  tokens.h
emp-toolkit/source/test/: bitcoin.cpp  ecdsa.cpp  hmac.cpp  misc_tests.cpp  sha256.cpp
emp-toolkit/source/unused/: ripemd-160.cpp  test.patch  uinteger.h
scalemamba/: Dockerfile  install.sh
scalemamba/data/: 3PNetworkData.txt  3PShamirSharingData.txt
scalemamba/io_patch/: Input_Output_File.cpp  Input_Output_File.h  Player.cpp
scalemamba/source/: ecdsa.mpc  innerprod.mpc  sha256.mpc  sha256_alt.mpc  sha256_init.mpc
